cluster/apps/default/nextcloud/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name nextcloud
  labels:
    app.kubernetes.io/name: *name
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nextcloud.${SECRET_DOMAIN_2}`)
      middlewares:
        - name: headers@file
        - name: nextcloud-1@file
        - name: nextcloud-2@file
      services:
        - name: *name
          port: 8080
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_2}-prod-tls
